apps/radarr/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
  labels:
    tailscale.com/proxy-class: nishir-radarr
spec:
  ingressClassName: tailscale
